fix: update values
fix

feat: add Ferriskey AppProject and database Application

Create AppProject "ferriskey" to allow the Git and chart repos and the
ferriskey-demo destination. Add ferriskey-database Application pointing
at
the k-soul repo (manifests) with automated sync and
CreateNamespace=true.
Update apps/ferriskey Application to use project "ferriskey" and the
ghcr.io/ferriskey/charts chart as its source.

feat: auto create admin password

feat: add ingress in values

feat: write README

fix: update values

fix: udpate values

fix: update replicas values

fix: update secret annotations

update replicas values

update values

wip

fix: ArgoCD apiVersion and add sync-wave

Add argocd.argoproj.io/sync-wave: "-2" annotations to the
ServiceAccount,
Role and RoleBinding so RBAC is created before the PreSync Job (which
remains at "-1"). Update Application apiVersion to argoproj.io/v1alpha1
and tidy YAML/inline comments and whitespace.

delete job

create job.yaml

update job.yaml

udpate job.yml

update values.yaml

update job.yaml

update files

--- a/apps/ferriskey/admin-secret-application.yaml
+++ b/apps/ferriskey/admin-secret-application.yaml
@@ -1,34 +1,30 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ferriskey
+  name: ferriskey-admin-secret
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   project: ferriskey
-  sources:
-    - repoURL: ghcr.io/ferriskey/charts
-      chart: ferriskey
-      targetRevision: 0.3.0
-      helm:
-        valueFiles:
-          - $values/apps/ferriskey/values.yaml
-    - repoURL: https://github.com/nathaelb/k-soul.git
-      targetRevision: HEAD
-      ref: values
+
+  source:
+    repoURL: https://github.com/nathaelb/k-soul.git
+    targetRevision: main
+    path: manifests/secrets
+
   destination:
     server: https://kubernetes.default.svc
     namespace: ferriskey-demo
 
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
     retry:
-      limit: 5
+      limit: 3
       backoff:
         duration: 5s
         factor: 2
